This is 2nd commit in Main

--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
 <h1>INTERACTIVE REBASE</h1>
+Interactive Rebase helps you optimize and clean up your commit history. It
+covers many different use cases, some of which allow you to to the following:
