This is 3rd commit in Main

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
 <h1>INTERACTIVE REBASE</h1>
 Interactive Rebase helps you optimize and clean up your commit history. It
 covers many different use cases, some of which allow you to to the following:
+edit an old commit message delete a commit squash/combine multiple commits
+reorder commits fix old commits split/reopen old commits for editing
